testing new fix for flicker

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -270,6 +270,7 @@ footer.is-visible {
   width: fit-content;
   text-transform: uppercase;
   cursor: default;
+  display: none;
 }
 
 .tools-used span {
